# voip_gw

./: CMakeLists.txt  README.md  api_test.cpp  audio_frame_impl.cpp  audio_frame_impl.h  audio_frame_info.cpp  audio_frame_info.h  call_manager_config.cpp  call_manager_config.h  codec_info.cpp  i_audio_frame.h  i_call.h  i_call_factory.h  i_call_manager.h  i_media_frame.h  i_media_session.h  i_media_stream.h  media_types.h  mutable_data_buffer.cpp  smart_buffer.cpp  smart_buffer.h  stream_metrics.cpp  stream_metrics.h  test.cpp  test.h  video_frame_impl.cpp  video_frame_impl.h  video_frame_info.cpp  video_frame_info.h  voip_control.cpp  voip_control.h  voip_types.h
c_api/: voip_api.h  voip_api_impl.cpp
opal/: opal_call.cpp  opal_call.h  opal_factory.cpp  opal_factory.h  opal_manager_config.cpp  opal_manager_config.h  opal_media_session.cpp  opal_media_session.h  opal_media_stream.cpp  opal_media_stream.h  opal_types.h  opal_utils.cpp  opal_video_frame.cpp  opal_video_frame.h
pc/: voipgw.pc.in
src/: audio_frame_impl.h  audio_frame_info.cpp  call_manager_config.h  codec_info.h  common_types.h  const_data_buffer.cpp  const_data_buffer.h  engine_impl.cpp  engine_impl.h  i_call.h  i_call_factory.h  i_call_manager.h  i_data_buffer.h  i_engine.h  i_media_format.h  i_video_frame.h  mutable_data_buffer.h  smart_buffer.cpp  stream_metrics.cpp  stream_metrics.h  video_frame_impl.cpp  video_frame_impl.h  video_frame_info.cpp  video_frame_info.h  voip_control.cpp  voip_control.h  voip_types.h
src/c_api/: voip_api.h  voip_api_impl.cpp
src/opal/: opal_call.cpp  opal_call.h  opal_factory.cpp  opal_factory.h  opal_manager_config.cpp  opal_manager_config.h  opal_media_session.cpp  opal_media_stream.cpp  opal_types.cpp  opal_utils.h  opal_video_frame.cpp
src/utils/: adaptive_delay.cpp  adaptive_delay.h  common_utils.cpp  common_utils.h  frame_queue.cpp  frame_queue.h
test/: api_test.cpp  api_test.h  c_api_test.c  c_api_test.h
